name:                ghcjs-google-map
version:             0.1.0.0
synopsis:            GHCJS wrapper for the Google Maps API
description:         Please see README.md
homepage:            http://github.com/manyoo/ghcjs-google-map#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Wong
maintainer:          ericsyw@gmail.com
copyright:           2015 Eric Wong
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Google.Maps.Types
                     , Google.Maps.LatLng
                     , Google.Maps.Event
                     , Google.Maps.Map
                     , Google.Maps.Geocoder
                     , Google.Maps
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , ghcjs-dom
  default-language:    Haskell2010

test-suite ghcjs-google-map-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghcjs-google-map
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ghcjs-google-map
